--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_sign_in: ^6.0.2
   firebase_core:
   dio: ^5.0.3
+  image_picker:
   socket_io_client: ^2.0.1
   dio_cookie_manager: ^2.1.3
   flutter_switch: ^0.3.2
